[gd_scene load_steps=4 format=2]

[ext_resource path="res://tilesets.png" type="Texture" id=1]
[ext_resource path="res://Plant/Plant.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.5, 16 )

[node name="Plant" type="Area2D"]
position = Vector2( 511, 318 )
script = ExtResource( 2 )

[node name="SmallGrowth" type="Sprite" parent="."]
position = Vector2( 0, -15 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 213, 257, 24, 32 )

[node name="LargeGrowth" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -24 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 256, 238, 32, 51 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -16 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Plant_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Plant_body_exited"]
